<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"BBStalker"</string>
    <string name="nothing_to_query">"Nothing to query :)"</string>
    <string name="json_db_err">"Error loading JSON database: I/O error or invalid JSON. If you didn\'t modify, rename or delete the original «database.json» file, please contact me (Raegdan)"</string>
    <string name="my_collection">"My collection"</string>
    <string name="all_db">"All database"</string>
    <string name="results_for">"Results for «"</string>
    <string name="in_collection">"in collection: "</string>
    <string name="json_saving_err">"JSON error occurred while saving data."</string>
    <string name="pcs_in_collection">"Pieces in collection: "</string>
    <string name="social_msg_bb">"Hey everypony! Just found W%1$s blind bags &amp; %2$s among them @ %3$s%4$s using #bbstalker"</string>
    <string name="social_msg_set">"Hey everypony! Just found %1$s collection set @ %2$s%3$s using #bbstalker"</string>
    <string name="social_msg_geo">", geo: %1$s"</string>
    <string name="app_title">"(\\ BBStalker v1.10.1 /)"</string>
    <string name="shop_name">"Shop:"</string>
    <string name="shop_field">"Walmart"</string>
    <string name="query">"Query"</string>
    <string name="watch_all_db">"Watch all database"</string>
    <string name="watch_all_waves">"Watch all waves"</string>
    <string name="help">"Help"</string>
    <string name="config">"Config"</string>
    <string name="code">"Code: "</string>
    <string name="help_header"><i><b>BBStalker</b>\nBrought to you by Raegdan\nLicense: GNU GPL v3</i></string>
    <string name="help_text">Help text in English coming soon.</string>
    <string name="trying_to_locate">Trying to get location...</string>
    <string name="trying_to_get_link">Trying to get a Google Maps link...</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="allow_geoloc">Geolocation</string>
    <string name="allow_geoloc_descr">Allow geolocation for social networks sharing.</string>
    <string name="title_activity_waves">WavesActivity</string>
    <string name="all_waves">All waves</string>
    <string name="wave">"Wave "</string>
    <string name="format">"Format: "</string>
    <string name="save_shop_name">Save shop name</string>
    <string name="no_shop_name">No shop name :(</string>
    <string name="subst_shop_name">Shop name in geo link</string>
    <string name="subst_shop_name_descr">Substitute the nearest shop by-name search into the geolocation link.</string>
    <string name="subst_shop_name_warn">May cause broken geolocation link if the shop name is incorrect or inaccurate.</string>
    <string name="looking_up">Looking up...</string>
    <string name="loading">Loading...</string>
    <string name="portrait_only">Portrait orientation only</string>
    <string name="portrait_only_descr">BBStalker is optimized for portrait orientation and may experience problems with the landscape one on small resolution devices.</string>
    <string name="smart_search">Smart search</string>
    <string name="smart_search_descr">Smart search performs a lot of computations. If your device CPU is not so fast and queries are processed slowly, you can disable it. The search results will always be sorted by wave number, then by blind bag number.</string>
    <string name="empty_list">Empty... :(</string>
    <string name="share">Share...</string>
    <string name="set">"Set: "</string>
    <string name="collection_set">Collection set</string>
    <string name="wishlist">My wishlist</string>
    <string name="cant_wish_existing">You already have this pony in collection! It makes no sense to wish for it...</string>
    <string name="import_export">Import / Export</string>
    <string name="btn_import">Import...</string>
    <string name="btn_export">Export...</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_paste">Paste</string>
    <string name="import_fault">Import failed! Double check the code you pasted.</string>
    <string name="import_success">Import succeeded!</string>
    <string name="export_success">Export succeeded!</string>
    <string name="copied">Copied to clipboard.</string>
    <string name="pasted">Pasted from clipboard.</string>
    <string name="close">Close</string>
    <string name="whatsnew_title"><b>What\'s new?</b></string>
    <string name="whatsnew_text"><b>1.10.1</b>\nWave 9\:\n&#8211; Shoeshine II picture added\n&#8211; Princess Cadance picture fixed\n\nSets added:\n&#8211; Pony Lesson Set\n&#8211; Groovin\' Hooves Set\n&#8211; Royal Surprise Set\n&#8211; Daring Pony Story Set</string>
    <string name="title_activity_detector">Detector</string>
    <string name="detector">Figure Detector</string>
    <string name="race">Race</string>
    <string name="alicorn">Alicorn</string>
    <string name="pegasus">Pegasus</string>
    <string name="earthen">Earthen</string>
    <string name="unicorn">Unicorn</string>
    <string name="colors">Colors</string>
    <string name="mane">Mane</string>
    <string name="body">Body</string>
    <string name="choose_color">Choose color...</string>
    <string name="reverse_search">Reverse search (Detector)</string>

</resources>
