<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlPWIE"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <EditText
        android:id="@+id/etPWIECode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnPWIEImport"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textMultiLine"
        android:lines="5"
        android:scrollHorizontally="false" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnPWIEImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPWIECode"
        android:layout_toRightOf="@+id/btnPWIEExport"
        android:text="@string/btn_import" />

    <Button
        android:id="@+id/btnPWIEExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etPWIECode"
        android:text="@string/btn_export" />

    <Button
        android:id="@+id/btnPWIECopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/btnPWIEExport"
        android:layout_below="@+id/btnPWIEExport"
        android:text="@string/btn_copy" />

    <Button
        android:id="@+id/btnPWIEPaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPWIEImport"
        android:layout_alignRight="@+id/btnPWIEImport"
        android:layout_below="@+id/btnPWIEImport"
        android:text="@string/btn_paste" />

</RelativeLayout>
